--- a/Twilio/Twilio.csproj
+++ b/Twilio/Twilio.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Twilio3</RootNamespace>
-    <AssemblyName>Twilio3</AssemblyName>
+    <RootNamespace>Twilio</RootNamespace>
+    <AssemblyName>Twilio</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -126,7 +126,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Utility\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiControllers\ConferenceController.cs" />
